# corndog

./: Cargo.toml  README.md
agent_source_destination/: Cargo.toml
agent_source_destination/src/: agent_destination.rs  agent_source.rs  bindings.rs  lib.rs  types.rs
agent_source_destination/wit/: world.wit
agent_ttp/: Cargo.toml
agent_ttp/src/: agent_ttp.rs  bindings.rs  identity.rs  lib.rs  types.rs
agent_ttp/wit/: world.wit
common/: Cargo.toml
common/src/: lib.rs
runtime_destination/: Cargo.toml
runtime_destination/src/: main.rs
runtime_source/: Cargo.toml
runtime_source/src/: main.rs
runtime_ttp/: Cargo.toml
runtime_ttp/src/: main.rs
test-files/: data.txt
