[workspace]
members = [
    "common",
    "agent_source_destination",
    "agent_ttp",
    "runtime_source",
    "runtime_destination",
    "runtime_ttp",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# libs for Wasm component
wit-bindgen = "0.55.0"

# runtime
wasmtime = "27.0"
wasmtime-wasi = "27.0"

# libs for crypto
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
blake3 = "1.5"
sha2 = "0.11.0"
hex = "0.4"
rand = "0.8"
getrandom = "0.2"
zeroize = "1.8"