[package]
name = "runtime_destination"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "runtime_destination"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true}
hex = { workspace = true }