[package]
name = "runtime_source"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "runtime_source"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true}
hex = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }